# track2d-lib

./: .gitignore  CMakeLists.txt  README.md
include/: track2d.hpp  vector2d.hpp
src/: global_average_estimator.cpp  instant_linear_estimator.cpp  linear_estimator.cpp  statistics.cpp  track2d.cpp
src/include/: global_average_estimator.hpp  instant_linear_estimator.hpp  linear_estimator.hpp  statistics.hpp
